@@ -8,11 +8,13 @@ FAMILIA, CHANGES
 * CHANGE: redis_objects, class_redis_objects maintain order they're defined in. (See Bluth::Queue)
 * CHANGE: Removed load_or_create
 * CHANGE: Depends on Storable 0.8.4
+* CHANGE: FamiliaObject.instances is now a sorted set
 * ADDED: InstanceMethods#initialize calls init if available
 * ADDED: Can set index values via InstanceMethods#index=
 * ADDED: empty? method for List, Set, et al
 * ADDED: :extend option for RedisObject instances
 * ADDED: :reference option for storing the index value instead of the marshaled value
+
 
 #### 0.6.1 (2010-12-18) ###############################
 
